--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kaniel-starter",
   "private": true,
   "description": "Kaniel's starter for projects",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "gatsby": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-layout": "^3.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-react-redux": "^1.1.0",
     "gatsby-plugin-sass": "^5.4.0",
@@ -30,11 +31,11 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "sass": "^1.45.1"
   },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
